<resources>
    <string name="app_name">QueAula</string>

    <string name="navigation_drawer_open">Navegaçao Aberta</string>
    <string name="navigation_drawer_close">Navegação Fechadar</string>

    <string name="menu_codigo">Código</string>
    <string name="lbl_aula">Aula 1</string>
    <string name="lbl_sala">Sala</string>
    <string name="lbl_prof">Prof</string>

    <string name="lbl_auladois">Aula 2</string>
    <string name="lbl_saladois">Sala 2</string>
    <string name="lbl_profdois">Prof 2</string>
    <string name="lbl_apresentacao">Apresentação</string>
    <string name="lblAlterar">Alterar</string>
    <string name="lbl_dalhe">Dalhe</string>
    <string name="lbl_Espaco">___________________________________</string>
    <string name="lbl_EspacoDois">___________________________________</string>
    <string name="lbl_professorum">ProfessorUm</string>
    <string name="lbl_professordois">ProfessorDois</string>
    <string name="galeria"></string>

    <!-- Tela Login -->
    <string name="img_logo2">logo</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_pass">Senha</string>
    <string name="txt_login"></string>
    <string name="txt_senha"></string>
    <string name="btn_login">Login</string>
    <string name="txt_footer"></string>
    <string name="img_logo"></string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="informa_o_2">Informação 2</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Sair</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
