<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:paddingTop="20dp"
                android:id="@+id/lay_logo"
                android:weightSum="1">
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:id="@+id/img_logo"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.93"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/img_logo" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="223dp"
                android:id="@+id/lay_login"
                android:layout_below="@+id/lay_logo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_login"
                    android:paddingTop="20dp"
                    android:textColor="#372c24"
                    android:id="@+id/textView" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:text="@string/txt_login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_pass"
                    android:paddingTop="20dp"
                    android:textColor="#372c24"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:text="@string/txt_senha"
                    />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_login"
                    android:layout_gravity="right"
                    android:id="@+id/btnLogin"
                    android:textColor="#FFF"
                    android:background="@color/colorAccent"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>