<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:background="@color/button_material_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="truegamers.queaula.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_apresentacao"
                    android:id="@+id/txtApresentacao"
                    android:paddingBottom="1dp"
                    android:textSize="20sp"
                    android:textColor="#FFF"
                    android:paddingLeft="10dp"
                    android:background="@color/colorAccent"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.v7.widget.CardView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/LayoutUm"
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        cardview:cardElevation="4dp"
                        cardview:cardUseCompatPadding="false"
                        cardview:cardCornerRadius="10dp"
                        android:layout_marginBottom="10dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >
                            <ImageView
                                android:id="@+id/imgvProf"
                                android:contentDescription="@string/lbl_professorum"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ngm"
                                />
                            <TextView
                                android:layout_toRightOf="@+id/imgvProf"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtAula"
                                android:background="#CFC"
                                android:text="@string/lbl_aula"
                                android:textSize="14sp"
                                android:paddingLeft="10sp"
                                />

                            <TextView
                                android:layout_toRightOf="@+id/imgvProf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:id="@+id/txtSala"
                                android:text="@string/lbl_sala"
                                android:layout_gravity="center"
                                android:textSize="16sp"
                                android:layout_marginTop="20dp"
                                android:paddingLeft="10sp"
                                />
                            <TextView
                                android:layout_alignRight="@+id/imgInfo"
                                android:text="@string/lbl_prof"
                                android:id="@+id/txtProf"

                                android:layout_alignParentBottom="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:paddingRight="50dp"
                                />
                            <TextView

                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:layout_alignRight="@+id/imgvProf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:id="@+id/txtInfo"
                                android:layout_gravity="right"
                                android:paddingRight="45dp"
                                android:paddingLeft="5dp"
                                android:paddingBottom ="45dp"
                                android:paddingTop ="5dp"
                                android:textColor="#FFF"
                                android:textSize="16sp"
                                android:enabled="false"
                                />
                            <ImageView
                                android:id="@+id/imgInfo"
                                android:layout_alignRight="@+id/imgvProf"
                                android:contentDescription="Informacao"
                                android:background="@color/colorPrimary"
                                android:src="@drawable/ic_info_outline_white"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:layout_width="45dp"
                                android:layout_height="30dp"
                                />

                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                    <!-- ///////////////// AULA 2 ///////////////// -->
                    <android.support.v7.widget.CardView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_below="@+id/LayoutUm"
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"

                        cardview:cardElevation="4dp"
                        cardview:cardUseCompatPadding="false"
                        cardview:cardCornerRadius="10dp"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            >
                            <ImageView
                                android:id="@+id/imgvProfDois"
                                android:contentDescription="@string/lbl_professordois"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ngm"

                                />
                            <TextView

                                android:layout_toRightOf="@+id/imgvProfDois"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtAulaDois"
                                android:text="@string/lbl_auladois"
                                android:background="#CFC"
                                android:textSize="14sp"
                                android:paddingLeft="10sp"
                                />
                            <TextView
                                android:layout_toRightOf="@+id/imgvProfDois"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:id="@+id/txtSalaDois"
                                android:text="@string/lbl_saladois"
                                android:layout_gravity="center"
                                android:textSize="16sp"
                                android:layout_marginTop="20dp"
                                android:paddingLeft="10sp"

                                />
                            <TextView
                                android:id="@+id/txtProfDois"
                                android:layout_alignRight="@+id/imgvProfDois"
                                android:text="@string/lbl_profdois"
                                android:layout_alignParentRight="true"

                                android:layout_alignParentBottom="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:paddingRight="50dp"

                                />
                            <TextView
                                android:layout_alignRight="@+id/imgvProfDois"
                                android:id="@+id/txtInfoDois"

                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:layout_gravity="right"
                                android:paddingRight="45dp"
                                android:paddingLeft="5dp"
                                android:paddingBottom ="45dp"
                                android:paddingTop ="5dp"
                                android:textColor="#FFF"
                                android:textSize="16sp"
                                android:enabled="false"
                                />
                            <ImageView
                                android:id="@+id/imgInfoDois"
                                android:layout_alignRight="@+id/txtProfDois"
                                android:background="@color/colorPrimary"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:layout_width="45dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_info_outline_white"
                                android:contentDescription="@string/informa_o_2" />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </RelativeLayout>
                <include
                    android:id="@+id/inc_tb_bottom"
                    layout="@layout/toolbar_bottom"/>
            </LinearLayout>

        </FrameLayout>

    </ScrollView>

</FrameLayout>

